tests/paczka1/fuzzy1/65681506.err
Error in line 7: CxySzxQ A519 72,7
Error in line 8: CxySzxQ A138 69,4
Error in line 17: RfjVuJ2w A519 98,4
Error in line 20: RfjVuJ2w A179 57,5
Error in line 32: S926 A138 39,5
Error in line 34: S926 S926 84,7
Error in line 37: S926 A519 54,6
